# SkeletalSkinning

./: CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake  FindFreeImage.cmake  FindGLFW3.cmake
include/glad/: glad.h
libraries/: assimp.lib
resources/: config.txt
resources/animations/: Akai_Badawcza.fbx  Akai_Lodzkiej.fbx  Akai_Naukowo.fbx  Akai_Politechniki.fbx  Akai_StandingRunForward.fbx  Warrok_OrcIdle.fbx  Warrok_StandingRunForward.fbx  Warrok_WarriorIdle.fbx
resources/models/: Willie.fbx
resources/shaders/: FragmentShaderModel.fs  FragmentShaderStandard.fs  VertexShaderModel.vs  VertexShaderStandard.vs
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  CoRCounter.cpp  CoRCounter.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Model.cpp  Model.h  Profiler.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp
src/Animation/: Animation.cpp  Animation.h  AnimationSequence.cpp  AnimationSequence.h  AnimationState.cpp  AnimationState.h  Skeleton.cpp  Skeleton.h
src/BasicOpenGL/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/DataStructures/: BoundedPriorityQueue.h  KDNode.h  KDTree.h
src/GUI/: GUI.cpp  GUI.h  GameObjectGUI.cpp  GameObjectGUI.h  ManagerGUI.cpp  ManagerGUI.h
src/Managers/: AnimationManager.cpp  AnimationManager.h  Manager.h  ModelManager.cpp  ModelManager.h
